[package]
name = "zoneminder-shared-sys"
version = "0.1.0"
authors = ["hab <_@habnab.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.82"
chrono = "0.4.19"
mozjpeg = "0.8.22"

[dev-dependencies]
shared_memory = "0.11.4"

[build-dependencies]
bindgen = "0.56.0"
